--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -68,6 +68,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\DataContainer.cs" />
+    <Compile Include="Models\DataItem.cs" />
+    <Compile Include="Models\Abstract\Observable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -100,5 +103,6 @@
       <Name>NTW.Panels</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
