--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Models\DataContainer.cs" />
     <Compile Include="Models\DataItem.cs" />
     <Compile Include="Models\Abstract\Observable.cs" />
+    <Compile Include="Models\ValueElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
