--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -44,6 +44,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\RullerStretch.cs" />
+    <Compile Include="Data\RullerSetting.cs" />
+    <Compile Include="Data\StartPosition.cs" />
     <Compile Include="Designers\AreaDesigner.cs" />
     <Compile Include="Designers\CanvasOffsetDesigner.cs" />
     <Compile Include="Designers\ElementsPathLineDesigner.cs" />
